stateless-poc-I/misc/apache-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apache-web-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    ingress.kubernetes.io/secure-backends: "true"
#    ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host:  enmapache.athtem.eei.ericsson.se
    http:
      paths:
      - path: /
        backend:
          serviceName: cmserv
          servicePort: 8080
#  tls:
#  - hosts:
#    -  enmk8s.athtem.eei.ericsson.se
#    secretName: python-secret
